--- a/index.scss
+++ b/index.scss
@@ -170,6 +170,10 @@ textarea:focus {
     }
 }
 
+.hide {
+    display: none !important;
+}
+
 // ------------------ //
 //  Background colors
 // ------------------ //
