--- a/index.css
+++ b/index.css
@@ -13105,6 +13105,9 @@ textarea:focus {
   cursor: pointer;
   box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.4) !important;
 }
+.tippy-content .dim {
+  opacity: 0.7;
+}
 
 .layout {
   display: flex;
