--- a/index.scss
+++ b/index.scss
@@ -448,6 +448,10 @@ textarea:focus {
         cursor: pointer;
         box-shadow: inset 0 0 0 2px rgba($white, 0.4) !important;
     }
+
+    .dim {
+        opacity: 0.7;
+    }
 }
 
 // ------------------ //
