--- a/index.scss
+++ b/index.scss
@@ -1117,7 +1117,7 @@ textarea:focus {
     }
 
     .start {
-        width: 75%;
+        width: 85%;
         font-size: 1.8rem;
         padding: 5px 10px;
         height: auto;
@@ -1132,6 +1132,7 @@ textarea:focus {
         height: 95px;
         margin-top: 10px;
         background-color: $grey-dark;
+        position: relative;
     }
 
     .html .sound-text {
@@ -1140,6 +1141,10 @@ textarea:focus {
 
     .html .sound-block {
         position: static !important;
+    }
+
+    .html .sound-overlay {
+        background-color: rgba($white, 0.25);
     }
 }
 
