Refactor sound select function, add fail sound

--- a/index.scss
+++ b/index.scss
@@ -1120,7 +1120,7 @@ textarea:focus {
         width: 85%;
         font-size: 1.8rem;
         padding: 5px 10px;
-        height: auto;
+        height: 40px;
         line-height: 1;
         font-family: 'Consolas', monospace;
     }
